- Fill PasswordOptions model and a little validation regarding the size of the password. - Creation of the class "PasswordGeneratorManager" which will be responsable for generating the password.

--- a/PasswordGenerator/PasswordGenerator.App/PasswordGenerator.App.csproj
+++ b/PasswordGenerator/PasswordGenerator.App/PasswordGenerator.App.csproj
@@ -6,4 +6,9 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PasswordGenerator.Core\PasswordGenerator.Core.csproj" />
+    <ProjectReference Include="..\PasswordGenerator.Models\PasswordGenerator.Models.csproj" />
+  </ItemGroup>
+
 </Project>
