--- a/PasswordGenerator/PasswordGenerator.Api/PasswordGenerator.Api.csproj
+++ b/PasswordGenerator/PasswordGenerator.Api/PasswordGenerator.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
