--- a/PasswordGenerator/PasswordGenerator.Core/PasswordGenerator.Core.csproj
+++ b/PasswordGenerator/PasswordGenerator.Core/PasswordGenerator.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PasswordGenerator.Models\PasswordGenerator.Models.csproj" />
   </ItemGroup>
 
